--- a/c18/learning_log/learning_logs/templates/learning_logs/topic.html
+++ b/c18/learning_log/learning_logs/templates/learning_logs/topic.html
@@ -1,8 +1,10 @@
 {% extends 'learning_logs/base.html' %}
 
-{% block content %}
-<h1>Topic: {{ topic }}</h1>
+{% block page_header %}
+<h1>{{ topic.text }}</h1>
+{% endblock page_header %}
 
+{% block content %}
 <p>Entries:</p>
 <p>
     <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
@@ -10,15 +12,18 @@
 
 <ul>
     {% for entry in entries %}
-        <li>
-            <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
-            <p>{{ entry.text|linebreaks }}</p>
-            <p>
-                <a href="{% url 'learning_logs:edit_entry' entry.id %}">
-                Edit entry</a></p>
-        </li>
+    <div class="card mb-3">
+        <!-- Card header with timestamp and edit link -->
+        <h4 class="card-header">
+            {{ entry.date_added|date:'M d, Y H:i' }}
+            <small><a href="{% url 'learning_logs:edit_entry' entry.id %}">
+                    edit entry</a></small>
+        </h4>
+        <!-- Card body with entry text -->
+        <div class="card-body">{{ entry.text|linebreaks }}</div>
+    </div>
     {% empty %}
-        <li>There are no entries for this topic yet.</li>
+    <p>There are no entries for this topic yet.</p>
     {% endfor %}
-    </ul>
+</ul>
 {% endblock content %}
